app/assets/stylesheets/Dashboard.css
/********************************************************************************************************* 分类系列
*******************************************************************************************************************/
/*.manage-left-menu[type="dashboard"] li:first-of-type{*/
    /*text-align:center;*/
    /*font-weight:lighter;*/
    /*font-size:25px;*/
    /*color:#5FA9DA;*/
    /*padding:28px 0 10px;*/
/*}*/
/*.manage-btn-group>a{*/
    /*padding:8px 15px;*/
/*}*/
/********************************************************************************************************* main content
*******************************************************************************************************************/
.dashboard-content{
    height:100%;
    margin-top:-120px;
    background-color:white;
}

/********************************************************************************************************* dashboard item
*******************************************************************************************************************/

.dashBoard-show{
    list-style-type: none;
    padding-bottom:50px;
    margin:0px;
}
.dashBoard-show>li{
    /*border:1px solid #ddd;*/
    padding:0;
    border-radius:6px;
    -webkit-border-radius:6px;
    -moz-border-radius:6px;
    box-shadow:1px 1px 4px rgba(0, 0, 0, 0.6);
    -moz-box-shadow:1px 1px 4px rgba(0, 0, 0, 0.6);
    -webkit-box-shadow:1px 1px 4px rgba(0, 0, 0, 0.6);
}
.dashboard-moreDetail{
    padding:6px 7px;
    position:relative;
    /*border-bottom:1px solid #ddd;*/
    /*background-color:#EFF2F6;*/
    cursor:move;
}
.dashboard-moreDetail>p{
    margin:-3px 0 0;
    width:300px;
    text-overflow:ellipsis;
    overflow:hidden;
    white-space:nowrap;
    font-size:16px;
    color:rgba(0,0,0,0.3);
}
.dashboard-moreDetail>i{
    position:absolute;
    top:5px;
    right:6px;
    pointer-events:auto;
    color:rgba(0,0,0,0.15);
    cursor:pointer;
    transition:color 0.35s ease-out;
}
.dashboard-moreDetail>i:hover{
    color:rgba(0,0,0,0.9);
}
.update-time{
    color: rgba(0, 0, 0, 0.3);
    font-size: 12px;
    position: absolute;
    right: 42px;
    top:6px;
}
/*dashboard loading*/
.dashboard-show-loading{
    position:absolute;
    top:0px;
    right:0px;
    bottom:0px;
    left:0px;
    background-color:#eaedec;
}
.dashboard-show-loading>i{
    position:absolute;
    width:28px;
    height:28px;
    left:50%;
    top:50%;
    margin-top:-14px;
    margin-left:-14px;
}
.dash-content{
    top:120px;
    position:relative;
}
/*full size dashboard*/
.dashboard-content-full{
    position:absolute;
    padding-top:10px;
    top:0px;
    right:0px;
    left:0px;
    bottom:0px;
    z-index:99;
    /*background-color:#222;*/
    /*应该注释掉下面这两个background*/
    background: -moz-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
    background: -webkit-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
    display:none;
}
.dashboard-fullsize-bg{
    background: -moz-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
    background: -webkit-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
}
.grister-logo{
    position:relative;
}
.gridster.black{
    /*background: -moz-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);*/
    /*background: -webkit-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);*/
}
.full-size-title{
    padding-left:20px;
    padding-top:10px;
    height:51px;
}
.full-size-title:after{
    content:"";
    display:"block";
    clear:both;
}
.full-size-label{
    text-align:center;
    font-size:38px;
    font-weight:lighter;
    word-break:break-all;
    word-wrap:break-word;
    color:#fff;
    font-family:"helve";
    display:inline-block;
    float:left;
    max-width:80%;
}
.full-size-btn{
    width:100px;
    float:left;
    background:#222;
    color:#fff;
}
.full-size-btn:hover{
    background:#505050;
    color:#fff;
}

